# coble

./: --input  -1.6.3  .gitignore  .gitlab-ci.yml  2  CONDA-DEV.md  DISK_SPACE_FIX.md  LICENSE  MKDOCS.md  Makefile  R-packages-sources.csv  R-packages.csv  R-session-info.txt  README.md  REVERT_MAC_WORKFLOW_README.md  TODO.md  USAGE.md  _freeze.cbl  aarch64-conda-linux-gnu-  bin  coble-capture-sylver.sh  coble-captured-base.yml  coble-captured-sylver2.yml  coble_tmp_coble-captured-sorted-sylver2.tmp  coble_tmp_coble-captured-sylver2.tmp  coble_tmp_conda-packages-sylver2.txt  coble_tmp_r-packages-sylver2.txt  environment.lock.yml  fi  find.cbl  mkdocs.yml  output.txt  pyproject.toml  r-360_summary.txt  r-packages.txt  requirements.txt  setup.py  sylver-recipe.sh  tmp_cap-conda-packages.txt  tmp_cap-r-packages.txt  (+5 more)
.devcontainer/: Dockerfile  devcontainer.json
coble/: __init__.py  cli.py
code/: 452.yml  Dockerfile  README.md  coble  coble-OLD.sh  coble-capture-r.R  coble-capture.sh  coble-container.sh  coble-create.sh  coble-deps-ci.sh  coble-deps-cran.sh  coble-deps-r.R  coble-errors.sh  coble-export.sh  coble-find.sh  coble-info-r.R  coble-network.sh  coble-one.sh  coble-r-source.sh  coble-rationalise.sh  coble-recipe-bash.sh  coble-recipe-slurm.sh  coble-recipise.sh  coble-recreate.sh  coble-resolve.sh  coble-template.sh  coble-update.sh  coble-viz.R  coble.Dockerfile  coble.container  coble.sh  tml_452.yml  tml_bash.cbl  tml_basic.cbl  tml_basic.yml  tml_bioinf.cbl  tml_bioinf.yml  tml_find.cbl  tml_fix.cbl  tml_fixed.cbl  (+11 more)
conda-recipe/: build.sh  meta.yaml
(+555 files in other folders)
